# soldiers

./: example_file.xlsx  main.py  pyproject.toml
.streamlit/: config.toml
